--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
