--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.3",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^9.0.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
