--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.3",
     "tslib": "^2.3.0",
